trunk/Archive2/3c/0e12bb44bac17c/output
main.cpp:18:5: error: control reaches end of non-void block
    };
    ^
1 error generated.
